# MiniClaude

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.pyw  run_debug.py
docs/: TECHNICAL.md
miniclaude/: __init__.py  __main__.py  app.py
miniclaude/agents/: orchestrator.py  sub_agent.py  team.py  worktree.py
miniclaude/context/: budget.py  compressor.py  externalizer.py  manager.py  placeholder.py
miniclaude/core/: config.py  context.py  loop.py  tool_executor.py
miniclaude/llm/: client.py  message_builder.py  token_counter.py
miniclaude/memory/: compressor.py  extractor.py  models.py  retriever.py  store.py  types.py
miniclaude/security/: auditor.py  permission.py  prompt_guard.py  risk_classifier.py  rules.py
miniclaude/skills/: base.py  catalog.py  router.py
miniclaude/skills/builtin/: code_analysis.py  code_document.py  code_gen.py  code_review.py  debug.py  explain.py  optimize.py  refactor.py  security_scan.py  test_gen.py
miniclaude/tools/: base.py  file_tools.py  memory_tools.py  registry.py  shell_tools.py
miniclaude/ui/: desktop.py  launcher.py  renderer.py  repl.py
tests/: conftest.py  test_context.py  test_memory.py  test_security.py  test_tools.py
